--- a/index.html
+++ b/index.html
@@ -8,17 +8,52 @@
 </head>
 <body>
   <h1> Hümeyra Ağırman</h1>
+
   <!-- hakkımda kısmı -->
+
   <h3> Hakkımda </h3>
     <p>Merhaba. Ben Hümeyra Ağırman. İstanbulda yaşıyorum. Kitap okumayı ve kodlama yapmayı çok seviyorum.</p>
     <p>Patika'daki eğitimler yararlı beni geliştiriyor.</p>
-  <!-- Sevdiğim şarkılar bölümü -->
-  <h2>Sevdiğim Şarkılar </h2>
+  
+    <!-- Sevdiğim şarkılar bölümü -->
+  
+    <h2>Sevdiğim Şarkılar </h2>
   <h3> İmkansız Bir Aşk Denir: yunusemre</h3>
     <p>Şekersiz isimli bir grubun parçasıdır. 2019 yılında şarkı yayınlanmıştır.Şekersiz 2015’in sonunda
         kurulmuş, alternatif slow müzik yapan, 4 üyeye sahip, singer/songwriter geleneği ile müzik üretimlerini
         sürdüren genç bir müzik grubudur. </p>
-  <!--kendi yorumum-->
-    <p>Bu şarkıda en dikkat çekici kısım "Yazsam bu hikayeyi alsam gömsem toprağa" kısmıdır. </p>
+  
+        <!--kendi yorumum-->
+  
+        <p>Bu şarkıda en dikkat çekici kısım "Yazsam bu hikayeyi alsam gömsem toprağa" kısmıdır. </p>
+    
+  <h3>İlgi Alanlarım</h3>
+  <ol>
+    <li>Filmler</li>
+      <ul>
+       <li>Aşk Ve Gurur</li>
+       <li>Before After Me </li>
+       <li>Ayla</li>
+      </ul>
+    <li>Diziler</li>
+    <ul>
+      <li> <a href="https://www.imdb.com/title/tt4574334/" target="_blank">
+       Stranger Things   
+      </a> </li>
+      <li>Riverdale</li>
+      <li>Friends</li>
+    </ul>
+      <li>Kitaplar</li>
+    <ul>
+      <li> <a href="https://www.goodreads.com/book/show/18135.Romeo_and_Juliet" target="_blank">
+        Romeo Ve Juliet
+      </a></li>
+      <li>Aşk Ve Gurur</li>
+      <li>Gurur ve Önyargı</li>
+    </ul>
+  </ol>
+  <img src="image/4.jpg" alt="Riverdale dizisi fotografı" title="Çok sevilen dizi Riverdale">
+  <p>Dram ve gizem türünde bir dizi olan Riverdale hakkında fotoğraf.</p>
 </body>
 </html>
+
